[package]
name = "mullvad-fs"
description = "File utility library"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log = "0.4"
tokio = { workspace = true, features = ["fs", "rt"] }
uuid = { version = "1.19.0", features = ["v4"] }

talpid-types = { path = "../talpid-types" }
